--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta name="description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Enoki helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
     <meta name="keywords" content="Enoki, AI, ethical AI, ethische AI, verantwoorde AI, AI duurzaamheid, AI advies, AI cursus, prompt training, AI training">
     <meta name="author" content="Enoki Team">
     <meta property="og:title" content="Enoki | AI, geworteld in waarden">
-    <meta property="og:description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta property="og:description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Enoki helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
     <meta property="og:image" content="/src/img/enoki_logo.png">
-    <meta property="og:url" content="https://www.bonsai-ai.nl">
+    <meta property="og:url" content="https://www.enoki-ai.nl">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Enoki | AI, verbonden in waarden">
     <meta name="twitter:description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Enoki helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
@@ -31,7 +31,7 @@
                 <div class="flex">
                     <!-- Logo -->
                     <a class="flex items-center text-2xl font-bold" href="/">
-                        Eno<span class="text-[var(--secondary-color)]">ki</span>
+                        eno<span class="text-[var(--secondary-color)]">ki</span>
                     </a>
                 </div>
 
@@ -98,7 +98,7 @@
                 <div class="flex flex-col md:flex-row w-full">
                     <div class="flex flex-col justify-between p-8 md:p-16 w-full md:w-2/3 z-10">
                         <div>
-                            <h1 class="font-bold mb-4 text-left text-5xl md:text-6xl" data-i18n="header.slogan"></h1>
+                            <h1 class="mb-4 text-left text-5xl md:text-6xl" data-i18n="header.slogan"></h1>
                             <p class="text-2xl md:text-3xl text-gray-700" data-i18n="header.title"></p>
                         </div>
                         <div class="flex justify-center mt-12 md:mt-5 lg:mt-0 md:justify-start">
@@ -112,9 +112,7 @@
                         </div>
                     </div>
                     <div class="w-full flex flex-col justify-end md:w-1/3 relative">
-                        <div id="bonsai-container" class="md:absolute right-0 md:right-2">
-                            <!-- SVG will be inserted here by JavaScript -->
-                        </div>
+                        <img class="h-[350px] md:h-4/5 mt-5 md:mt-0" src="/src/img/enoki_logo.svg"></img>
                     </div>
                 </div>
             </div>
@@ -282,7 +280,7 @@
                     <div class="flex flex-row items-center mb-4">
                         <h3 class="text-lg font-semibold" data-i18n="meta.name">Enoki</h3>
                         <!-- inline svg (white)-->
-                        <img src="/src/svg/bonsai_logo.svg" alt="Bonsai logo" class="h-6 w-6 ml-2 svg-white-filter">
+                        <img src="/src/svg/bonsai_logo.svg" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </div>
                     <p class="text-gray-400" data-i18n="header.slogan">AI, geworteld in waarden</p>
                 </div>
