--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
 </head>
 
 <body class="gradient-bg min-h-screen">
-    <nav class="bg-white border-b border-gray/10 fixed top-0 w-full z-50" x-data="{ isOpen: false }">
+    <nav class="bg-[var(--footer-bg)] border-b border-gray/10 fixed top-0 w-full z-50" x-data="{ isOpen: false }">
         <div class="max-w-[1500px] mx-auto px-4">
             <div class="flex justify-between h-16">
                 <div class="flex">
                     <!-- Logo -->
-                    <a class="flex items-center text-2xl font-bold" href="/">
-                        eno<span class="text-[var(--secondary-color)]">ki</span>
+                    <a class="text-white flex items-center text-2xl font-bold" href="/">
+                        enoki
+                        <img src="/src/img/enoki_logo.svg" style="margin-bottom: 8px" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </a>
                 </div>
 
                 <!-- Mobile menu button -->
                 <div class="flex items-center -mr-2 lg:hidden">
                     <button @click="isOpen = !isOpen"
-                        class="inline-flex items-center justify-center p-2 rounded-md text-gray-400  hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
+                        class="inline-flex items-center justify-center p-2 rounded-md text-white  hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
                         <span class="sr-only">Open main menu</span>
                         <svg class="h-6 w-6" x-show="!isOpen" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -52,16 +53,16 @@
                 </div>
 
                 <!-- Desktop menu -->
-                <div class="hidden lg:flex lg:items-center lg:ml-6 ">
-                    <div class="flex space-x-4 items-center">
+                <div class="hidden text-white lg:flex lg:items-center lg:ml-6 ">
+                    <div class="flex text-white space-x-4 items-center">
                         <a href="#why" data-i18n="nav.why"
-                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-[var(--secondary-color)]">Why</a>
-                        <a href="#approach" data-i18n="nav.approach"
-                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-[var(--secondary-color)]">Approach</a>
+                            class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-white">Why</a>
+                        <!-- <a href="#approach" data-i18n="nav.approach"
+                            class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-white">Approach</a> -->
                         <a href="#who" data-i18n="nav.who"
-                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-[var(--secondary-color)]">Who</a>
+                            class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-white">Who</a>
                         <a href="#contact"
-                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-[var(--secondary-color)]">Contact</a>
+                            class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-white">Contact</a>
                         <div class="language-switcher flex items-center space-x-2 ml-4 border-l border-gray-300 pl-4">
                             <button id="lang-en" class="lang-btn px-2 py-1 rounded text-sm font-medium"
                                 data-lang="en">EN</button>
@@ -78,8 +79,8 @@
                 <div class="flex flex-col px-2 pt-2 pb-3 space-y-1">
                     <a href="#why" data-i18n="nav.why" @click="isOpen = !isOpen"
                             class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Why</a>
-                    <a href="#approach" data-i18n="nav.approach" @click="isOpen = !isOpen"
-                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Approach</a>
+                    <!-- <a href="#approach" data-i18n="nav.approach" @click="isOpen = !isOpen"
+                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Approach</a> -->
                     <a href="#who" data-i18n="nav.who" @click="isOpen = !isOpen"
                         class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Who</a>
                     <a href="#contact" @click="isOpen = !isOpen"
@@ -143,12 +144,10 @@
         </div>
 
         <!-- Approach Section -->
-        <div id="approach" class="w-full mb-16">
+        <!-- <div id="approach" class="w-full mb-16">
             <div class="bg-[var(--background-color-2)] p-8 md:p-16 rounded-3xl">
                 <h2 class="text-3xl font-bold mb-6 section-title" data-i18n="approach.title"></h2>
                 <p class="text-xl mb-8" data-i18n="approach.labDescription"></p>
-                
-                <!-- Key Approach Points -->
                 <div class="mb-12">
                     <h3 class="text-2xl font-bold mb-6" data-i18n="approach.keyPoints.title"></h3>
                     <ul class="list-disc pl-6 space-y-4 text-lg">
@@ -197,7 +196,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Team Section -->
         <div id="who" class="w-full mb-16">
@@ -278,9 +277,9 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <div class="flex flex-row items-center mb-4">
-                        <h3 class="text-lg font-semibold" data-i18n="meta.name">Enoki</h3>
+                        <h3 class="text-lg font-semibold" data-i18n="meta.name">enoki</h3>
                         <!-- inline svg (white)-->
-                        <img src="/src/svg/bonsai_logo.svg" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
+                        <img src="/src/img/enoki_logo.svg" style="margin-bottom: 8px" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </div>
                     <p class="text-gray-400" data-i18n="header.slogan">AI, geworteld in waarden</p>
                 </div>
